PIRATE-4169 - Fixed navigation wrapping to a new line to early

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -469,9 +469,9 @@ input[type="search"]::-webkit-search-decoration {
 .header-title {
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
-	-webkit-flex: 1 1 auto;
-	-ms-flex: 1 1 auto;
-	flex: 1 1 auto;
+	-webkit-flex: 1 0 auto;
+	-ms-flex: 1 0 auto;
+	flex: 1 0 auto;
 
 	@media @mobile {
 		max-width: 80%;
@@ -479,12 +479,11 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .template-nav {
-
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
-	-webkit-flex: 1 0 50%;
-	-ms-flex: 1 0 50%;
-	flex: 1 0 50%;
+	-webkit-flex: 1 1 auto;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 
 
